--- a/slimfast.html
+++ b/slimfast.html
@@ -85,9 +85,9 @@
 <div class="radarpanel" >
     <canvas id="Radar" height="900px" width="900px" ></canvas>
 </div>
-<script type="text/javascript" src = "js/canvastest.js"></script>
-<script type="text/javascript" src = "js/localstorage.js"></script>
-<script type="text/javascript" src = "js/loadSystem.js"></script>
+<script type="text/javascript" src = "canvastest.js"></script>
+<script type="text/javascript" src = "localstorage.js"></script>
+<script type="text/javascript" src = "loadSystem.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
